--- a/aizunonbee.html
+++ b/aizunonbee.html
@@ -7,7 +7,7 @@
 <h1>あいづ呑んべぇ文化支援プロジェクト - api.opendata.go.jp</h1>
 
 <script type="module" src="./map-gsi-csv.js"></script>
-<map-gsi-csv src="https://code4sabae.github.io/opendatagojp/csv/aizuwakamatsu-shi/aizu-nonbee.csv" url="https://www.city.aizuwakamatsu.fukushima.jp/docs/2020062600053/"></map-gsi-csv>
+<map-gsi-csv src="https://data.data4citizen.jp/dataset/4ba64d18-5163-46e9-a50f-64b13faf3e2f/resource/f53b555a-47a1-463b-a643-62fd78c6d374/download/0706.csv" xsrc="https://code4sabae.github.io/opendatagojp/csv/aizuwakamatsu-shi/aizu-nonbee.csv" url="https://www.city.aizuwakamatsu.fukushima.jp/docs/2020062600053/"></map-gsi-csv>
 
 <style>
 table {
@@ -18,11 +18,12 @@ td, th {
 }
 </style>
 <script type="module" src="https://code4sabae.github.io/js/csv-viewer.js"></script>
-<csv-viewer src="https://code4sabae.github.io/opendatagojp/csv/aizuwakamatsu-shi/aizu-nonbee.csv" name="あいづ呑んべぇ文化支援プロジェクト事業"></csv-viewer>
+<csv-viewer src="https://data.data4citizen.jp/dataset/4ba64d18-5163-46e9-a50f-64b13faf3e2f/resource/f53b555a-47a1-463b-a643-62fd78c6d374/download/0706.csv" name="あいづ呑んべぇ文化支援プロジェクト事業"></csv-viewer>
 
 <hr>
-Data: <a href=https://portal.opendata.go.jp/docs/aizuwakamatsu-shi-product/1/routes/aizu-nonbee/get>Aizuwakamatsu-shi COVID-19 APIs | Open Data API Portal</a> → <a href=data/aizuwakamatsu-shi/aizu-nonbee.csv>CSV</a><br>
-App: <a href=https://fukuno.jig.jp/3074>政府提供 Open Data API を使ってみた感想と課題 - 福野泰介の一日一創</a> (<a href=https://github.com/code4sabae/opendatagojp/>src on GitHub</a>)<br>
+Data: <a href=https://data.data4citizen.jp/dataset/10360005>あいづ呑んべぇ文化支援プロジェクト - データセット - DATA for CITIZEN</a>
+ <a href="https://data.data4citizen.jp/dataset/4ba64d18-5163-46e9-a50f-64b13faf3e2f/resource/f53b555a-47a1-463b-a643-62fd78c6d374/download/0706.csv">CSV</a> (<a href=https://portal.opendata.go.jp/docs/aizuwakamatsu-shi-product/1/routes/aizu-nonbee/get>Aizuwakamatsu-shi COVID-19 APIs | Open Data API Portal</a>)<br>
+App: <a href=https://fukuno.jig.jp/3092>CSV.jsをSJIS対応、改良されたオープンデータAPIポータルの意義 - 福野泰介の一日一創</a> (<a href=https://github.com/code4sabae/opendatagojp/>src on GitHub</a>)<br>
 
 </body>
 </html>
